# auth/api/v1/resourses/oauth_helper/oauth.py
@@ -1,0 +1,122 @@
+
+import json
+
+from flask import current_app, redirect, request, url_for, jsonify
+from flask_jwt_extended import create_access_token, create_refresh_token
+from rauth import OAuth1Service, OAuth2Service
+
+
+class OAuthSignIn(object):
+    providers = None
+
+    def __init__(self, provider_name):
+        self.provider_name = provider_name
+        credentials = current_app.config["OAUTH_CREDENTIALS"][provider_name]
+        self.consumer_id = credentials["client_id"]
+        self.consumer_secret = credentials["client_secret"]
+
+    def authorize(self):
+        pass
+
+    def callback(self):
+        pass
+
+    def get_callback_url(self):
+
+        return url_for('oauth_helper.oauth_callback', provider=self.provider_name,
+                       _external=True)
+
+    def create_tokens(self, identity: str):
+        access_token = create_access_token(
+            identity=identity, additional_claims={"is_administrator": False}
+        )
+        refresh_token = create_refresh_token(identity=identity)
+        return jsonify(access_token=access_token.decode("utf-8"), refresh_token=refresh_token.decode("utf-8"))
+
+    @classmethod
+    def get_provider(self, provider_name):
+        if self.providers is None:
+            self.providers = {}
+            for provider_class in self.__subclasses__():
+                provider = provider_class()
+                self.providers[provider.provider_name] = provider
+        return self.providers[provider_name]
+
+
+class YandexSignIn(OAuthSignIn):
+    def __init__(self):
+        super(YandexSignIn, self).__init__("yandex")
+        self.service = OAuth2Service(
+            name="yandex",
+            client_id=self.consumer_id,
+            client_secret=self.consumer_secret,
+            authorize_url="https://oauth.yandex.ru/authorize",
+            access_token_url="https://oauth.yandex.ru/token",
+            base_url="https://oauth.yandex.ru"
+        )
+
+    def authorize(self):
+        print(self.get_callback_url())
+        return redirect(self.service.get_authorize_url(
+            scope="login:email login:info",
+            response_type="code",
+            redirect_uri=self.get_callback_url())
+        )
+
+    def callback(self):
+        def decode_json(payload):
+            return json.loads(payload.decode("utf-8"))
+
+        if "code" not in request.args:
+            return None, None, None
+        oauth_session = self.service.get_auth_session(
+            data={"code": request.args["code"],
+                  "response_type": "code",
+                  "grant_type": "authorization_code",
+                  "redirect_uri": self.get_callback_url()},
+            decoder=decode_json
+        )
+        info = oauth_session.get(url="https://login.yandex.ru/info").json()
+        social_id = info.get("id")
+        login = info.get("login")
+        email = info.get("default_email")
+        return social_id, login, email
+
+
+class GoogleSignIn(OAuthSignIn):
+    def __init__(self):
+        super(GoogleSignIn, self).__init__('google')
+        self.service = OAuth2Service(
+            name='google',
+            client_id="1010159233057-05mcpmoans8m83f3qlpmlllip7iurldk.apps.googleusercontent.com",
+            client_secret="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",
+            authorize_url='https://accounts.google.com/o/oauth2/auth',
+            access_token_url='https://oauth2.googleapis.com/token',
+            base_url='https://www.googleapis.com/'
+        )
+
+    def authorize(self):
+        return redirect(self.service.get_authorize_url(
+            scope='email',
+            response_type='code',
+            redirect_uri=self.get_callback_url())
+        )
+
+    def callback(self):
+        def decode_json(payload):
+            return json.loads(payload.decode('utf-8'))
+
+        if 'code' not in request.args:
+            return None, None, None
+        oauth_session = self.service.get_auth_session(
+            data={'code': request.args['code'],
+                  'grant_type': 'authorization_code',
+                  'redirect_uri': self.get_callback_url()},
+            decoder=decode_json
+        )
+        me = oauth_session.get('oauth2/v2/userinfo').json()
+        return (
+            'google$' + me['id'],
+            me.get('email').split('@')[0],
+            me.get('email')
+        )
